scrollbar display issue

--- a/new/style.css
+++ b/new/style.css
@@ -13,6 +13,7 @@
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
+
 @media only screen and (max-width: 414px) {
   .mobile-wrap {
     margin: 0;
@@ -22,13 +23,14 @@
     position: absolute;
     top: 0;
     /* max-height: 736px; */
-    max-height: unset;
+    /* max-height: unset; */
     left: 0;
     -ms-transform: translate(0%, 0%);
     transform: translate(0%, 0%);
     box-shadow: none;
   }
 }
+
 .mobile-wrap:before {
   top: 0;
   left: 0;
@@ -38,6 +40,7 @@
   position: absolute;
   background-color: #fff;
 }
+
 .mobile {
   z-index: 99;
   color: #222;
@@ -49,4 +52,15 @@
 .mobile-wrap,
 .mobile.clearfix {
   overflow: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
